--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,15 @@
-    <div style="height: 10rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
+    <div style="text-align:center; margin-top: 2rem; font-family: 'Comfortaa', cursive;">
+
+        <div style="font-size: .6rem;">
+            <span>공지사항</span> |
+            <span>서비스 소개</span> |
+            <span>광고 제휴</span>
+
+        </div>
+
+        <div>
+            <h6>memune</h6>
+        </div>
+
 
     </div>
