--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,14 +1,14 @@
-    <div style="text-align:center; margin-top: 2rem; font-family: 'Comfortaa', cursive;">
+    <div class="memune_footer">
 
-        <div style="font-size: .6rem;">
+        <div class="memune_footer_button">
             <span>공지사항</span> |
             <span>서비스 소개</span> |
             <span>광고 제휴</span>
 
         </div>
 
-        <div>
-            <h6>memune</h6>
+        <div style="margin-top: 1rem;">
+            <h6 class="memune_logo">memune</h6>
         </div>
 
 
