--- a/templates/head.html
+++ b/templates/head.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <head>
     <meta charset="UTF-8">
     <title>Ted Park Project</title>
@@ -10,6 +12,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
 
 </head>
