--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
-    <div style="text-align:center; margin: 2rem 0; ">
+    <div class="memune_header">
         <div>
-            <H1 style="font-family: 'Comfortaa', cursive;">memune</H1>
+            <H1 class="memune_logo">memune</H1>
         </div>
 
         <div>
