--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -8,6 +8,15 @@
             Testing
         </h1>
 
+        <form action="/account/hello_world/" method="post">
+            {% csrf_token %}
+            <input type="submit" class="btn btn-primary" value="POST">
+        </form>
+
+        <H1>
+            {{ text }}
+        </H1>
+
     </div>
 
 
