--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -2,20 +2,31 @@
 
 {% block content %}
 
-    <div style="height: 20rem; background-color: #38df81; border-radius: 1rem; margin: 2rem;">
+    <div style="border-radius: 1rem; margin: 2rem; text-align: center">
 
-        <h1>
-            Testing
+        <h1 style="font-family: 'Comfortaa', cursive;">
+            Hello World!
         </h1>
 
         <form action="/account/hello_world/" method="post">
             {% csrf_token %}
+
+            <div>
+                <input type="text" name="hello_world_input">
+            </div>
+
+
+            <div>
             <input type="submit" class="btn btn-primary" value="POST">
+            </div>
         </form>
 
+
+        {% if hello_world_output %}
         <H1>
-            {{ text }}
+            {{ hello_world_output.text }}
         </H1>
+        {% endif %}
 
     </div>
 
