--- a/accountapp/templates/accountapp/hello_world.html
+++ b/accountapp/templates/accountapp/hello_world.html
@@ -22,10 +22,12 @@
         </form>
 
 
-        {% if hello_world_output %}
-        <H1>
-            {{ hello_world_output.text }}
-        </H1>
+        {% if hello_world_list %}
+            {% for hello_world in hello_world_list %}
+            <H4>
+                {{ hello_world.text }}
+            </H4>
+            {% endfor %}
         {% endif %}
 
     </div>
