--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -1,12 +1,21 @@
 {% extends 'base.html' %}
 
+{% load bootstrap4 %}
+
 {% block content %}
 
-    <div>
+    <div style="text-align: center; max-width: 400px; margin: 4rem auto">
+
+        <div class="mb-4">
+            <h4>
+                Sign Up
+            </h4>
+        </div>
+
         <form action = "{% url 'accountapp:create' %}" method="POST">
             {% csrf_token %}
-            {{ form }}
-            <input type="submit" class="btn btn-primary">
+            {% bootstrap_form form %}
+            <input type="submit" class="btn btn-dark rounded-pill col-4 mt-4">
         </form>
     </div>
 
