--- a/accountapp/templates/accountapp/login.html
+++ b/accountapp/templates/accountapp/login.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
+{% load bootstrap4 %}
+
 {% block content %}
 
-    <div>
+    <div style="text-align: center; max-width: 400px; margin: 4rem auto">
         <div>
             <h4>
                 Login
@@ -12,8 +14,9 @@
         <div>
             <form action="" method="POST">
                 {% csrf_token %}
-                {{ form }}
-                <input type="submit" class="btn btn-primary">
+<!--                {{ form }}-->
+                {% bootstrap_form form %}
+                <input type="submit" class="btn btn-dark rounded-pill col-4 mt-4" value="Login">
             </form>
         </div>
 
