--- a/templates/head.html
+++ b/templates/head.html
@@ -15,5 +15,14 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
+    <style>
+
+        @font-face {
+            font-family: 'NanumSquareRoundOTFR';
+            src: local('NanumSquareRoundOTFR'),
+            url("{% static 'fonts/NanumSquareRoundOTFR.otf' %}") format("opentype");
+
+    </style>
+
 
 </head>
