--- a/templates/header.html
+++ b/templates/header.html
@@ -16,6 +16,10 @@
 
             {% else %}
 
+            <a href="{% url 'accountapp:detail' pk=user.pk %}">
+                <span>My Page</span>
+            </a>
+
             <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
                 <span>Logout</span>
             </a>
