--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -17,6 +17,13 @@
           Change Info
         </p>
       </a>
+
+      <a href="{% url 'accountapp:delete' pk=user.pk %}">
+        <p>
+          Quit
+        </p>
+      </a>
+
       {% endif %}
 
 
