--- a/templates/header.html
+++ b/templates/header.html
@@ -14,6 +14,10 @@
                 <span>Login</span>
             </a>
 
+            <a href="{% url 'accountapp:create' %}">
+                <span>Sign Up</span>
+            </a>
+
             {% else %}
 
             <a href="{% url 'accountapp:detail' pk=user.pk %}">
