--- a/accountapp/templates/accountapp/delete.html
+++ b/accountapp/templates/accountapp/delete.html
@@ -12,7 +12,7 @@
             </h4>
         </div>
 
-        <form action = "{% url 'accountapp:delete' pk=user.pk %}" method="POST">
+        <form action = "{% url 'accountapp:delete' pk=target_user.pk %}" method="POST">
             {% csrf_token %}
             <input type="submit" class="btn btn-danger rounded-pill col-4 mt-4" value="계정 삭제">
         </form>
