--- a/accountapp/templates/accountapp/update.html
+++ b/accountapp/templates/accountapp/update.html
@@ -12,7 +12,7 @@
             </h4>
         </div>
 
-        <form action = "{% url 'accountapp:update' pk=user.pk %}" method="POST">
+        <form action = "{% url 'accountapp:update' pk=target_user.pk %}" method="POST">
             {% csrf_token %}
             {% bootstrap_form form %}
             <input type="submit" class="btn btn-dark rounded-pill col-4 mt-4">
