--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -4,21 +4,42 @@
 
   <div>
     <div style="text-align:center; max-width: 500px; margin: 4rem auto;">
-      <p>
-        {{ target_user.date_joined }}
-      </p>
 
       {% if target_user.profile %}
+
+        <img src="{{ target_user.profile.image.url }}" alt="" style="height: 8rem; width: 8rem; border-radius: 10rem; margin-bottom: 2rem;">
+
         <h2>
           {{ target_user.profile.nickname }}
+          {% if target_user == user %}
+          <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+            Edit
+          </a>
+          {% endif %}
         </h2>
+
+        <h5 style="margin-bottom: 2rem;">
+          {{ target_user.profile.message }}
+        </h5>
+
       {% else %}
-      <a href="{% url 'profileapp:create' %}">
-        <h2>
-          Create Profile
-        </h2>
-      </a>
+
+        {% if target_user == user %}
+          <a href="{% url 'profileapp:create' %}">
+            <h2>
+              Create Profile
+            </h2>
+          </a>
+
+        {% else %}
+        <H2>
+          닉네임 미설정
+        </H2>
+        {% endif %}
+
       {% endif %}
+
+
 
       {% if target_user == user %}
       <a href="{% url 'accountapp:update' pk=user.pk %}">
