--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,9 @@
         </div>
 
         <div>
-            <span>nav1</span>
+            <a href="{% url 'articleapp:list' %}">
+                <span>Articles</span>
+            </a>
             <span>nav2</span>
             <span>nav3</span>
 
