--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -27,6 +27,10 @@
         </p>
       </a>
 
+      {% for comment in target_article.comment.all %}
+        {% include 'commentapp/detail.html' with comment=comment %}
+      {% endfor %}
+
       {% include 'commentapp/create.html' with article=target_article %}
 
 
