--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -3,29 +3,31 @@
 {% block content %}
 
   <div>
-    <div style="text-align:center; max-width: 500px; margin: 4rem auto;">
+    <div style="text-align:center; max-width: 700px; margin: 4rem auto;">
 
       <H1>
         {{ target_article.title }}
       </H1>
 
-      <img src="{{ target_article.image.url }}" alt="" style="width: 400px; margin: 3rem auto;">
+      <h5>
+        {{ target_article.writer.profile.nickname }}
+      </h5>
+
+      <img style="width: 100%; border-raidus: 1rem; margin: 2rem 0;" src="{{ target_article.image.url }}" alt="" style="width: 400px; margin: 3rem auto;">
 
       <p>
         {{ target_article.content }}
       </p>
 
-      <a href="{% url 'articleapp:update' pk=target_article.pk %}">
-        <p>
-          Update Article
-        </p>
-      </a>
+      {% if target_article.writer == user %}
+        <a href="{% url 'articleapp:update' pk=target_article.pk %}" class="btn btn-primary rounded-pill col-3">
+          Update
+        </a>
 
-      <a href="{% url 'articleapp:delete' pk=target_article.pk %}">
-        <p>
-          Delete Article
-        </p>
-      </a>
+        <a href="{% url 'articleapp:delete' pk=target_article.pk %}" class="btn btn-danger rounded-pill col-3">
+            Delete
+        </a>
+      {% endif %}
 
       {% for comment in target_article.comment.all %}
         {% include 'commentapp/detail.html' with comment=comment %}
