--- a/articleapp/templates/articleapp/list.html
+++ b/articleapp/templates/articleapp/list.html
@@ -20,48 +20,25 @@
 
 </style>
 
+    {% if article_list %}
+        <div class="container">
+            {% for article in article_list %}
+                <a href="{% url 'articleapp:detail' pk=article.pk %}">
+                    {% include 'snippets/card.html' with article=article %}
+                </a>
+            {% endfor %}
 
-    <div class="container">
-      <div class="item1">
-          <img src="https://picsum.photos/200/300" alt="">
-      </div>
-      <div class="item2">
-          <img src="https://picsum.photos/200/250" alt="">
-      </div>
-      <div class="item3">
-          <img src="https://picsum.photos/200/320" alt="">
-      </div>
-      <div class="item4">
-          <img src="https://picsum.photos/200/248" alt="">
-      </div>
-      <div class="item5">
-          <img src="https://picsum.photos/200/265" alt="">
-      </div>
-      <div class="item6">
-          <img src="https://picsum.photos/200/280" alt="">
-      </div>
-      <div class="item7">
-          <img src="https://picsum.photos/200/301" alt="">
-      </div>
-      <div class="item8">
-          <img src="https://picsum.photos/200/220" alt="">
-      </div>
-      <div class="item9">
-          <img src="https://picsum.photos/200/238" alt="">
-      </div>
-      <div class="item10">
-          <img src="https://picsum.photos/200/272" alt="">
-      </div>
-      <div class="item11">
-          <img src="https://picsum.photos/200/270" alt="">
-      </div>
-      <div class="item12">
-          <img src="https://picsum.photos/200/290" alt="">
-      </div>
-      <div class="item13">
-          <img src="https://picsum.photos/200/245" alt="">
-      </div>
-    </div>
+            <script src="{% static 'js/magicgrid.js' %}"></script>
+
+        </div>
+    {% else %}
+        <div class="text-align: center;">
+            <H1>아티클이 없습니다.</H1>
+        </div>
+    {% endif %}
+
+    {% include 'snippets/pagination.html' with page_obj=page_obj %}
+
 
     <div style="text-align: center;">
         <a href="{% url 'articleapp:create' %}" class="btn btn-dark rounded-pill col-3 mt-3 mb-3">
@@ -70,6 +47,6 @@
     </div>
 
 
-    <script src="{% static 'js/magicgrid.js' %}"></script>
+
 
 {% endblock %}
