--- a/static/base.css
+++ b/static/base.css
@@ -22,3 +22,17 @@
         font-size: 13px;
     }
 }
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: blue;
+    text-decoration: none;
+}
+
+.header_nav {
+    margin: 1rem 0.5rem;
+}
