--- a/templates/header.html
+++ b/templates/header.html
@@ -4,11 +4,14 @@
         </div>
 
         <div>
-            <a href="{% url 'articleapp:list' %}">
+            <a href="{% url 'articleapp:list' %}" class="header_nav">
                 <span>Articles</span>
             </a>
-            <span>nav2</span>
-            <span>nav3</span>
+
+            <a href="{% url 'projectapp:list' %}" class="header_nav">
+                <span>Projects</span>
+            </a>
+
 
             {% if not user.is_authenticated %}
 
@@ -16,17 +19,17 @@
                 <span>Login</span>
             </a>
 
-            <a href="{% url 'accountapp:create' %}">
+            <a href="{% url 'accountapp:create' %}" class="header_nav">
                 <span>Sign Up</span>
             </a>
 
             {% else %}
 
-            <a href="{% url 'accountapp:detail' pk=user.pk %}">
+            <a href="{% url 'accountapp:detail' pk=user.pk %}" class="header_nav">
                 <span>My Page</span>
             </a>
 
-            <a href="{% url 'accountapp:logout' %}?next={{ request.path }}">
+            <a href="{% url 'accountapp:logout' %}?next={{ request.path }}" class="header_nav">
                 <span>Logout</span>
             </a>
 
