--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -58,6 +58,11 @@
 
 
     </div>
+
+    <div>
+      {% include 'snippets/list_fragment.html' with article_list=object_list %}
+    </div>
+
   </div>
 
 {% endblock %}
