--- a/articleapp/templates/articleapp/detail.html
+++ b/articleapp/templates/articleapp/detail.html
@@ -15,9 +15,10 @@
 
       <img style="width: 100%; border-raidus: 1rem; margin: 2rem 0;" src="{{ target_article.image.url }}" alt="" style="width: 400px; margin: 3rem auto;">
 
-      <p>
-        {{ target_article.content }}
-      </p>
+      <div style="text-align: left;">
+        {{ target_article.content | safe}}
+      </div>
+
 
       {% if target_article.writer == user %}
         <a href="{% url 'articleapp:update' pk=target_article.pk %}" class="btn btn-primary rounded-pill col-3">
