--- a/articleapp/templates/articleapp/update.html
+++ b/articleapp/templates/articleapp/update.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 
+<script src="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/js/medium-editor.min.js"></script>
+<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/medium-editor@5.23.2/dist/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
+
+
     <div style="text-align: center; max-width: 400px; margin: 4rem auto">
 
         <div class="mb-4">
@@ -18,6 +22,8 @@
             <input type="submit" class="btn btn-dark rounded-pill col-4 mt-4">
         </form>
     </div>
+
+<script>var editor = new MediumEditor('.editable');</script>
 
 
 {% endblock %}
