--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -12,8 +12,10 @@
         <h2>
           {{ target_user.profile.nickname }}
           {% if target_user == user %}
-          <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
-            Edit
+          <a class="material-icons"
+            style="box-shadow: 0 0 4px #ccc; border-radius: 10rem; padding: .4rem;"
+            href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+            edit
           </a>
           {% endif %}
         </h2>
@@ -42,16 +44,16 @@
 
 
       {% if target_user == user %}
-      <a href="{% url 'accountapp:update' pk=user.pk %}">
-        <p>
-          Change Info
-        </p>
+      <a class="material-icons"
+            style="box-shadow: 0 0 4px #ccc; border-radius: 10rem; padding: .4rem;"
+            href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+            settings
       </a>
 
-      <a href="{% url 'accountapp:delete' pk=user.pk %}">
-        <p>
-          Quit
-        </p>
+      <a class="material-icons"
+            style="box-shadow: 0 0 4px #fcc; border-radius: 10rem; padding: .4rem;"
+            href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
+            cancel
       </a>
 
       {% endif %}
