--- a/templates/head.html
+++ b/templates/head.html
@@ -16,6 +16,11 @@
 
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
 
+    <!-- Google Icons   -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
+
+
+
     <style>
 
         @font-face {
